# EzTao

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  Changelog.md  Changelog.rst  LICENSE  README.md  environment.yml  noxfile.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  tests.yml
benchmark/: benchmark.py  benchmark_fit.py
dev/: 00_basic_python.ipynb  00_template.ipynb  LC_sim_functions.ipynb  SimLC_Seed_Option.ipynb
dev/carma_term/: CARMA->Celerite.ipynb  CARMA_func.ipynb  carma_amp.ipynb  carma_term.ipynb  explore_overflow.ipynb
dev/celerite_fit/: Celerite_white_noise.ipynb  DHO_fit.ipynb
dev/gpFit_char/: DHO_param_MC.ipynb  DRW_LL_Uncertainty.ipynb  GP_fit_dist2.ipynb  GP_fit_dist_seed.ipynb  GP_fit_distribution.ipynb  GP_mockLC_amp.ipynb  LL_Viz.ipynb
dev/lc/: GP_fit.ipynb  GP_fit_Bulk.ipynb  lc_utils.ipynb  mockLC_amp.ipynb
dev/validate_kali/: mockLC_amp.ipynb
dev/viz/: DHO_LL_Viz.ipynb  DRW_LL_Viz.ipynb
docs/: conf.py  index.rst  requirements.txt
docs/notebooks/: 00_About_CARMA.ipynb  01_Quick_start.ipynb  02_Simulation.ipynb  03_Fit.ipynb  04_MCMC.ipynb  05_OtherUtils.ipynb
docs/python/: carma.rst  ts.rst  viz.rst
src/agntk/carma/: CARMATerm.py  __init__.py  utils.py
src/agntk/lc/: carma.py  utils.py
src/agntk/viz/: mpl_viz.py
src/eztao/: __init__.py
src/eztao/carma/: CARMATerm.py  __init__.py  model_utils.py
src/eztao/ts/: __init__.py  carma.py  carma_fit.py  carma_mcmc.py  carma_sim.py  utils.py
src/eztao/viz/: __init__.py  eztao.rc  mpl_viz.py
tests/: test_CARMAFit.py  test_CARMASim.py  test_CARMASimFit.py  test_CARMATerm.py  test_CARMAUtils.py
tutorials/: 00_Introduction.ipynb  01_Core.ipynb  02_Simulation.ipynb  03_Fit.ipynb  04_MCMC.ipynb  05_OtherUtils.ipynb
workflows/: .ci.yml
