[tool.poetry]
name = "eztao"
version = "0.3.0"
description = "A toolkit for Active Galactic Nuclei (AGN) time-series analysis."
authors = ["Weixiang Yu <wy73@drexel.edu>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ywx649999311/EzTao"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
celerite = ">= 0.3.0"
matplotlib = "^3.3.0"
scipy = "> 1.5.0"
numba = ">= 0.51.0"
importlib-metadata = ">= 2.0.0"
emcee = ">=3.0.0"

[tool.poetry.dev-dependencies]
toml = "^0.10.1"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
joblib = "^0.17.0"
pandas = "^1.1.4"
Sphinx = "^3.4.1"
sphinx-rtd-theme = "^0.5.0"
nbsphinx = "^0.8.0"
sphinx-copybutton = "^0.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
